# kwami-ai-lk

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml
agent/: agent.py  config.py  livekit.toml  plugins.py  pyproject.toml
agent/agent/: memory.py
agent/src/: agent.py  config.py  constants.py  exceptions.py  main.py  room_context.py  session.py
agent/src/factories/: llm.py  realtime.py  stt.py  tts.py
agent/src/handlers/: config_handler.py
agent/src/memory/: context.py
agent/src/tools/: builtin.py
agent/src/usage/: __init__.py  reporter.py  tracker.py
agent/src/utils/: __init__.py  provider.py
api/: Dockerfile  config.py  livekit.py  main.py  pyproject.toml
api/routes/: __init__.py  health.py  memory.py  token.py
src/core/: __init__.py  config.py  livekit.py
