[project]
name = "kwami-ai-lk"
version = "0.1.0"
description = "LiveKit token endpoint and agent server for Kwami AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kwami AI Team" }]
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # LiveKit
    "livekit>=1.0.0",
    "livekit-agents>=1.3.0",
    "livekit-plugins-openai>=1.3.0",
    "livekit-plugins-deepgram>=1.3.0",
    "livekit-plugins-cartesia>=1.3.0",
    "livekit-plugins-silero>=1.3.0",
    
    # Utils
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

# Optional AI providers
elevenlabs = ["livekit-plugins-elevenlabs>=1.3.0"]
google = ["livekit-plugins-google>=1.3.0"]
anthropic = ["livekit-plugins-anthropic>=1.3.0"]
assemblyai = ["livekit-plugins-assemblyai>=1.3.0"]

[project.scripts]
kwami-api = "kwami_lk.api.main:run"
kwami-agent = "kwami_lk.agent.worker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kwami_lk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
